--- a/tools/render/index.html
+++ b/tools/render/index.html
@@ -4,6 +4,7 @@
   </head>
   <body>
     <div id='canvas' style='position: relative; width: 300; height: 300; background-color: russet;'></div>
+    <script>var data = %s;</script>
     <script src='raphael-min.js'></script>
     <script src='dracula_graffle.js'></script>
     <script src='dracula_graph.js'></script>
