--- a/tools/render/index.html
+++ b/tools/render/index.html
@@ -3,6 +3,10 @@
     <title>Render</title>
   </head>
   <body>
+    <span>
+      <button id='prev'>Prev</button>
+      <button id='next'>Next</button>
+    </span>
     <div id='canvas' style='position: relative; width: 300; height: 300; background-color: russet;'></div>
     <script>var data = %s;</script>
     <script src='raphael-min.js'></script>
